2010-05-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-progress-reporter-update): New defun.
	(with-progress-reporter): Use it.
	(tramp-process-one-action):
	* tramp-gvfs.el (tramp-gvfs-handler-askquestion): Preserve current
	message, in order to let progress reporter continue
	afterwards.  (Bug#6257)

2010-05-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-do-copy-or-rename-file)
	(tramp-handle-file-local-copy, tramp-maybe-open-connection): Tune
	`with-progress-reporter' messages.
	(tramp-handle-vc-registered):
	* tramp-fish.el (tramp-fish-handle-file-local-copy)
	(tramp-fish-handle-insert-file-contents)
	(tramp-fish-maybe-open-connection):
	* tramp-gvfs.el (tramp-gvfs-maybe-open-connection):
	* tramp-imap.el (tramp-imap-do-copy-or-rename-file)
	(tramp-imap-handle-insert-file-contents)
	(tramp-imap-handle-file-local-copy): Use `with-progress-reporter'.

2010-05-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-methods): Add `tramp-async-args' attribute where
	appropriate.
	(tramp-maybe-open-connection): Use it.

2010-05-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (with-progress-reporter): Create reporter object only
	when the message would be displayed.  Handle nested calls.
	(tramp-handle-load, tramp-handle-file-local-copy)
	(tramp-handle-insert-file-contents, tramp-handle-write-region)
	(tramp-maybe-send-script, tramp-find-shell): Use
	`with-progress-reporter'.
	(tramp-handle-dired-compress-file, tramp-maybe-open-connection):
	Fix message text.

	* tramp-smb.el (tramp-smb-handle-copy-file)
	(tramp-smb-handle-file-local-copy, tramp-smb-handle-rename-file)
	(tramp-smb-handle-write-region, tramp-smb-maybe-open-connection):
	Use `with-progress-reporter'.

2010-05-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-do-file-attributes-with-stat): Add space in
	format string, in order to work around a bug in pdksh.  Reported
	by Gilles Pion <gpion@lfdj.com>.