@@ -1,8 +1,13 @@
+2010-05-25  Christian Lynbech  <christian.lynbech@tieto.com>  (tiny change)
+
+	* tramp.el (tramp-handle-insert-directory): Don't use
+	`forward-word', it's default syntax could be changed.
+
 2010-05-25  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-progress-reporter-update): New defun.
 	(with-progress-reporter): Use it.
-	(tramp-process-one-action):
+	(tramp-process-actions):
 	* tramp-gvfs.el (tramp-gvfs-handler-askquestion): Preserve current
 	message, in order to let progress reporter continue
 	afterwards.  (Bug#6257)
